Added the admin panel configuration so no need to modify .env all the time and added platform script to launch the infrastructure
